Vidoteach changes: - Visual separation between livefeedback report charts - Fix last chart was cut off - Chart title gets border with category color

--- a/templates/default/app.less
+++ b/templates/default/app.less
@@ -290,8 +290,8 @@ form[id^="smallpart-student-index"] {
 		position: fixed;
 		left: 0;
 		top: 46px;
+	  	bottom: 0px;
 		z-index: 10000;
-		height: 100%;
 	}
 	et2-details.livefeedbackReport.textH2.tasks.fullscreen::part(base) {
 		max-height: 100%;
